[package]
name = "rusty_catan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.9.1"
bevy_vox_mesh = "0.5.0"
petgraph = "0.6.3"
queues = "1.1.0"
